package service

import (
	"context"

	commonpb "github.com/datifyy/backend/gen/common/v1"
	userpb "github.com/datifyy/backend/gen/user/v1"
	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

// SearchUsers searches for users based on filters
func (s *UserService) SearchUsers(
	ctx context.Context,
	req *userpb.SearchUsersRequest,
) (*userpb.SearchUsersResponse, error) {
	// TODO: Extract user ID from auth context for personalized results
	// userID, _ := getUserIDFromContext(ctx)

	// TODO: Implement actual database query with filters
	// - Apply gender filters
	// - Apply age range filters
	// - Apply distance filters (requires location data)
	// - Apply interest filters
	// - Apply relationship goal filters
	// - Apply education level filters
	// - Apply verified_only filter
	// - Apply online_only filter
	// - Apply height range filters
	// - Apply lifestyle filters (drinking, smoking, children)
	// - Calculate compatibility scores
	// - Exclude blocked users
	// - Implement pagination

	// Placeholder response
	page := int(req.Pagination.Page)
	pageSize := int(req.Pagination.PageSize)
	if page < 1 {
		page = 1
	}
	if pageSize < 1 || pageSize > 100 {
		pageSize = 20
	}

	return &userpb.SearchUsersResponse{
		Users: []*userpb.UserProfile{},
		Pagination: &commonpb.PaginationResponse{
			Page:       int32(page),
			PageSize:   int32(pageSize),
			TotalCount: 0,
			TotalPages: 0,
		},
	}, nil
}

// GetRecommendations gets personalized user recommendations
func (s *UserService) GetRecommendations(
	ctx context.Context,
	req *userpb.GetRecommendationsRequest,
) (*userpb.GetRecommendationsResponse, error) {
	// TODO: Extract user ID from auth context
	userID, err := getUserIDFromContext(ctx)
	if err != nil {
		return nil, status.Error(codes.Unauthenticated, "authentication required")
	}

	// TODO: Implement recommendation algorithm
	// - Get user's partner preferences
	// - Find users matching preferences
	// - Calculate compatibility scores based on:
	//   * Shared interests
	//   * Similar relationship goals
	//   * Compatible lifestyle choices
	//   * Location proximity
	// - Apply machine learning/ranking algorithm
	// - Exclude already seen/matched/rejected users
	// - Exclude blocked users

	// Default limit if not specified
	limit := req.Limit
	if limit <= 0 {
		limit = 10
	}

	_ = userID // Use the userID variable

	// Placeholder response
	return &userpb.GetRecommendationsResponse{
		Recommendations: []*userpb.UserProfile{},
		TotalCount:      0,
	}, nil
}
